<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智慧城市</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_title">会员登陆</string>
    <string name="login_register">注册</string>
    <string name="login_login">登陆</string>
    <string name="login_forget">忘记密码?</string>
    <string name="login_usr_hint">请输入账号</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="title_activity_register">会员注册</string>


    <string name="app_id">51eba0d6</string>
</resources>
